--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="sobre">
             <figure>
-                <img src="img/foto_minha.png" alt="Ítalo Shekinah Soares e Freitas">
+                <img src="img/minha_foto.jpg" alt="Ítalo Shekinah Soares e Freitas">
                 <figcaption>Ítalo Shekinah Soares e Freitas.</figcaption>
             </figure>
             <div class="card-sobre">
@@ -102,7 +102,7 @@
             <figure>
                 <div>
                     <img src="img/icone/whatsapp.png" alt="Telefone">
-                    <figcaption>(31) 98865-6082</figcaption>
+                    <figcaption>(11) 91091-5595</figcaption>
                 </div>
             </figure>
             <figure>
