--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="sobre">
             <figure>
-                <img src="img/minha_foto.jpg" alt="Ítalo Shekinah Soares e Freitas">
+                <img src="img/aaaaaaa.jpg" alt="Ítalo Shekinah Soares e Freitas">
                 <figcaption>Ítalo Shekinah Soares e Freitas.</figcaption>
             </figure>
             <div class="card-sobre">
